# High-Performance-Web-Crawler-Search-Engine

./: .gitignore  Cargo.toml  Dockerfile  README  README.md
config/: default.toml
examples/: basic_crawl.rs
src/: lib.rs  main.rs
src/common/: config.rs  error.rs
src/crawler/: crawler.rs  fetcher.rs  frontier.rs  mod.rs  parser.rs  robots.rs
