[package]
name = "web-crawler"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance web crawler and search engine written in Rust"
repository = "https://github.com/yourusername/High-Performance-Web-Crawler-Search-Engine"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
ureq = "2.9"

# HTML parsing
scraper = "0.18"

# URL handling
url = "2.5"

# Web framework
axum = "0.7"
tower = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Rate limiting
governor = "0.6"

# Simple key-value store
sled = "0.34"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "crawler"
path = "src/bin/crawler.rs"

[[bin]]
name = "search-server"
path = "src/bin/search_server.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1